force-app/main/default/objects/Ticket_Encoding_Rule__c/Ticket_Encoding_Rule__c.object-meta.xml
<CustomObject>
    <description>編碼原則</description>
    <label>Ticket Encoding Rule</label>
    <nameField>
        <displayFormat>TER-{00000}</displayFormat>
        <label>No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ticket Encoding Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>