force-app/main/default/objects/Ticket_Encoding_Rule__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <defaultValue>&apos;JX&apos;</defaultValue>
    <label>Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>