force-app/main/default/objects/Ticket_Encoding_Rule__c/fields/End_Check_Code__c.field-meta.xml
<CustomField>
    <fullName>End_Check_Code__c</fullName>
    <label>End Check Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>