force-app/main/default/objects/Ticket_Encoding_Rule__c/fields/End_No__c.field-meta.xml
<CustomField>
    <fullName>End_No__c</fullName>
    <label>End No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>