force-app/main/default/objects/Ticket_Encoding_Rule__c/fields/Expiring_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiring_Date__c</fullName>
    <description>使用期限</description>
    <label>Expiring Date</label>
    <type>Date</type>
</CustomField>