force-app/main/default/objects/Ticket_Encoding_Rule__c/fields/Fixed__c.field-meta.xml
<CustomField>
    <fullName>Fixed__c</fullName>
    <label>Fixed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>