force-app/main/default/objects/Ticket_Encoding_Rule__c/fields/Start_Check_Code__c.field-meta.xml
<CustomField>
    <fullName>Start_Check_Code__c</fullName>
    <label>Start Check Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>