force-app/main/default/objects/Ticket_Encoding_Rule__c/fields/Start_No__c.field-meta.xml
<CustomField>
    <fullName>Start_No__c</fullName>
    <label>Start No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>