force-app/main/default/objects/Ticket_Encoding_Rule__c/recordTypes/Certificate_No.recordType-meta.xml
<RecordType>
    <fullName>Certificate_No</fullName>
    <active>true</active>
    <description>機票兌換編碼</description>
    <label>Certificate No</label>
</RecordType>