force-app/main/default/objects/Ticket_Encoding_Rule__c/recordTypes/Coupon_No.recordType-meta.xml
<RecordType>
    <fullName>Coupon_No</fullName>
    <active>true</active>
    <description>憑證編號</description>
    <label>Coupon No</label>
</RecordType>