force-app/main/default/objects/Ticket_Encoding_Rule__c/recordTypes/Item_No.recordType-meta.xml
<RecordType>
    <fullName>Item_No</fullName>
    <active>true</active>
    <description>案件編號</description>
    <label>Item No</label>
</RecordType>