force-app/main/default/objects/Ticket_Encoding_Rule__c/validationRules/vrTicket_Encoding_Rule_Start_Check_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>vrTicket_Encoding_Rule_Start_Check_Code</fullName>
    <active>true</active>
    <description>Start Check Code must less than End Check Code</description>
    <errorConditionFormula>Start_Check_Code__c &gt;End_Check_Code__c</errorConditionFormula>
    <errorMessage>Start Check Code must less than End Check Code</errorMessage>
</ValidationRule>