force-app/main/default/objects/Ticket_Encoding_Rule__c/validationRules/vrTicket_Encoding_Rule_Start_No.validationRule-meta.xml
<ValidationRule>
    <fullName>vrTicket_Encoding_Rule_Start_No</fullName>
    <active>true</active>
    <description>Start No. must less than End No.</description>
    <errorConditionFormula>Start_No__c &gt; End_No__c</errorConditionFormula>
    <errorMessage>Start No. must less than End No.</errorMessage>
</ValidationRule>