force-app/main/default/objects/Ticket_Encoding_Rule__c/validationRules/vrTicket_Encoding_Rule_Start_No_3.validationRule-meta.xml
<ValidationRule>
    <fullName>vrTicket_Encoding_Rule_Start_No_3</fullName>
    <active>true</active>
    <description>Start No must be three numeric character.</description>
    <errorConditionFormula>RecordType.Name=&quot;Item No&quot; &amp;&amp; len(Start_No__c)&lt;&gt; 3</errorConditionFormula>
    <errorMessage>Start No must be trigram.</errorMessage>
</ValidationRule>