force-app/main/default/objects/Ticket_Encoding_Rule__c/validationRules/vrTicket_Encoding_Rule_Start_No_4.validationRule-meta.xml
<ValidationRule>
    <fullName>vrTicket_Encoding_Rule_Start_No_4</fullName>
    <active>true</active>
    <description>Start No must be four numeric character.</description>
    <errorConditionFormula>RecordType.Name=&quot;Coupon No&quot; &amp;&amp; len(Start_No__c)&lt;&gt; 4</errorConditionFormula>
    <errorMessage>Start No must be four numeric character.</errorMessage>
</ValidationRule>