force-app/main/default/objects/Ticket_Encoding_Rule__c/listViews/Certificate_No.listView-meta.xml
<ListView>
    <fullName>Certificate_No</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Type__c</columns>
    <columns>Country__c</columns>
    <columns>Year__c</columns>
    <columns>Batch__c</columns>
    <columns>Start_No__c</columns>
    <columns>End_No__c</columns>
    <columns>Start_Check_Code__c</columns>
    <columns>End_Check_Code__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Ticket_Encoding_Rule__c.Certificate_No</value>
    </filters>
    <label>Certificate No</label>
</ListView>