force-app/main/default/objects/Ticket_Encoding_Rule__c/listViews/Item_No.listView-meta.xml
<ListView>
    <fullName>Item_No</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Code__c</columns>
    <columns>Year__c</columns>
    <columns>Department__c</columns>
    <columns>Start_No__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Ticket_Encoding_Rule__c.Item_No</value>
    </filters>
    <label>Item No</label>
</ListView>